# knowledge-synthesizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Pricing  OpenAI (2025-02-05).md  README.md  SECURITY.md  knowledge_synthesizer.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  test_document.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
src/: __init__.py
src/knowledge_synthesizer/: __init__.py  cli.py  synthesizer.py
tests/: conftest.py  test_cli.py  test_synthesizer.py
