[build-system]
requires = ["hatchling", "packaging>=23.0"]
build-backend = "hatchling.build"

[project]
name = "knowledge-synthesizer"
version = "0.1.0"
description = "A Python tool that integrates with Daniel Miessler's Fabric project for AI-powered content analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "nlp", "fabric", "openai", "knowledge"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "openai>=1.6.1",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
knowledge-synthesizer = "knowledge_synthesizer.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.24.0",
    "coverage>=7.4.0",
    "packaging>=23.0",
]

[tool.pytest.ini_options]
addopts = "-v --cov=knowledge_synthesizer --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/knowledge_synthesizer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 100 